JumpScript/tests/baselines/reference/propertyNamedPrototype.errors.txt
tests/cases/conformance/classes/propertyMemberDeclarations/propertyNamedPrototype.jump(3,12): error TS2699: Static property 'prototype' conflicts with built-in property 'Function.prototype' of constructor function 'C'.


==== tests/cases/conformance/classes/propertyMemberDeclarations/propertyNamedPrototype.jump (1 errors) ====
    class C {
        prototype: number; // ok
        static prototype: C; // error
               ~~~~~~~~~
!!! error TS2699: Static property 'prototype' conflicts with built-in property 'Function.prototype' of constructor function 'C'.
    }